data/derived/comb/progs/unify/prog0975.ml.out
Characters 94-123:
  | h::t -> bigCombiner t l2 (acc @ mulByDigit ( h * (tensMul n))) (n + 1);;
                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list -> int list
       but an expression was expected of type 'a list
